# C-C-Transpiler

./: PROJECT_COMPLETION_REPORT.md  SETUP_GUIDE.md  start.bat  start.sh
Multi-Language Source-to-Source Compiler/backend-cpp/: CMakeLists.txt  out.js  out.py  output.py  output.txt  output_minimal.py  package-lock.json  package.json  server.js  test_input.c  test_js.c  test_minimal.c  test_output.js  test_output2.js  test_output3.js  test_printf.c
Multi-Language Source-to-Source Compiler/backend-cpp/include/: ast.h  code_generator.h  codegen.h  intermediate_code.h  lexer.h  optimizer.h  parser.h  semantic_analyzer.h  symbol_table.h
Multi-Language Source-to-Source Compiler/backend-cpp/src/: intermediate_code.cpp  lexer.cpp  main.cpp  optimizer.cpp  parser.cpp  semantic.cpp  symbol_table.cpp
Multi-Language Source-to-Source Compiler/backend-cpp/src/codegen/: asm_gen.cpp  code_generator.cpp  csharp_gen.cpp  java_gen.cpp  python_gen.cpp
Multi-Language Source-to-Source Compiler/frontend/: compiler.html  index.html
Multi-Language Source-to-Source Compiler/frontend/css/: compiler.css  style.css
Multi-Language Source-to-Source Compiler/frontend/js/: api.js  compiler.js  editor.js  generator.js  lexer.js  main.js  optimizer.js  parser.js  semantic.js  ui-controller.js
